test/test_suite2/errors/error_else.c3t
module foo;

fault Baz
{
	TEST
}

module bar;
import foo;

fn int! abc()
{
	return Baz.TEST!;
}

module baz;
import foo;

fn int! abc()
{
	return Baz.TEST!;
}
